Restore Java 8 compatibility of tests